Prepare for B+ tree

--- a/database/database.vcxproj
+++ b/database/database.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{CCB50064-34F1-4C71-8D8D-FED34D24C8E9}</ProjectGuid>
+    <ProjectGuid>{9F72AF8B-6819-436D-9766-784B47A766A4}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>IO</RootNamespace>
+    <RootNamespace>database</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -138,11 +138,23 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\IO\IO\bpn.h" />
+    <ClInclude Include="..\..\IO\IO\bpt.h" />
+    <ClInclude Include="database.h" />
+    <ClInclude Include="databaseIO.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="IO.cpp" />
+    <ClCompile Include="..\..\IO\IO\bpn.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="..\..\IO\IO\bpt.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="database.cpp" />
+    <ClCompile Include="databaseIO.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
