--- a/database/database.vcxproj
+++ b/database/database.vcxproj
@@ -138,18 +138,18 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\IO\IO\bpn.h" />
-    <ClInclude Include="..\..\IO\IO\bpt.h" />
+    <ClInclude Include="bpn.h" />
+    <ClInclude Include="bpt.h" />
     <ClInclude Include="database.h" />
     <ClInclude Include="databaseIO.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\IO\IO\bpn.cpp">
+    <ClCompile Include="bpn.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="..\..\IO\IO\bpt.cpp">
+    <ClCompile Include="bpt.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="database.cpp" />
