Changes in details
In order to delete data by id
introduce Balanced tree with duplicate keys.
Feature achieved: insert / fetch
To-do: remove by id

--- a/database/database.vcxproj
+++ b/database/database.vcxproj
@@ -138,7 +138,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bpn+.h" />
     <ClInclude Include="bpn.h" />
+    <ClInclude Include="bpt+.h" />
     <ClInclude Include="bpt.h" />
     <ClInclude Include="database.h" />
     <ClInclude Include="databaseIO.h" />
@@ -146,7 +148,13 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="bpn+.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
     <ClCompile Include="bpn.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="bpt+.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="bpt.cpp">
